# poke-book

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yml
build-aux/: com.github.nozwock.PokeBook.Devel.json
data/: com.github.nozwock.PokeBook.desktop.in.in  com.github.nozwock.PokeBook.gschema.xml.in  com.github.nozwock.PokeBook.metainfo.xml.in.in
data/resources/: meson.build  resources.gresource.xml  style.css
data/resources/ui/: shortcuts.blp  window.blp  window.ui
data/resources/ui/content-pages/: ability.blp  move.blp  pokemon.blp
po/: POTFILES.in
src/: application.rs  lib.rs  main.rs  resource_object.rs  window.rs
src/models/: mod.rs  poke_resource.rs
src/pokeapi/: mod.rs
src/widgets/: ability.rs  mod.rs  move_.rs  pokemon.rs  window.rs
