[package]
name = "poke-book"
version = "0.1.0"
authors = ["nozwock <magenta-duck.ezffr@slmail.me>"]
edition = "2021"

[profile.release]
lto = true

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.8", package = "gtk4", features = ["gnome_46"] }
adw = { version = "0.6", package = "libadwaita", features = ["v1_5"] }
tracing = "0.1"
tracing-subscriber = "0.3"
